[package]
name = "filelock"
version = "0.3.0"
edition = "2018"
description = "filelock for rust, work in progress"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "^0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["handleapi"] }

[target.'cfg(unix)'.dependencies]
libc = "^0.2"
